# DevAIOps

./: .copilot-review-instructions.md  .copilot-test-instructions.md  .gitignore  README.md  example_file_manager.py  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: commit-message.instructions.md  pull-request-description.instructions.md  review.instructions.md  test-generation.instructions.md
.github/prompts/: commit-message.prompt.md  pull-request-description.prompt.md  review.prompt.md  test-generation.prompt.md
samples/: code_smells_example.py  estatistica.py  vulnerable_exec.py
